Temporary device Id added in js

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         Countly.setLoggingEnabled(true);
         Countly.init("https://trinisoft.count.ly", "f0b2ac6919f718a13821575db28c0e2971e05ec5");
         // Countly.eventSendThreshold(1);
+        // Countly.deviceIDType["TemporaryDeviceID"];
     };
     app.initWithID = function(){
         Countly.pushTokenType(Countly.messagingMode.TEST, "Default Name", "Default Description");
