--- a/example/cordova/countly-demo-js/www/index.html
+++ b/example/cordova/countly-demo-js/www/index.html
@@ -168,13 +168,22 @@
                 Countly.setLoggingEnabled(true); // Enable countly internal debugging logs
                 Countly.enableCrashReporting(); // Enable crash reporting to report unhandled crashes to Countly
                 Countly.setRequiresConsent(true); // Set that consent should be required for features to work.
+                Countly.giveConsentInit(["location", "sessions", "attribution", "push", "events", "views", "crashes", "users", "push", "star-rating", "apm"]); // give conset for specific features before init.
+                Countly.setLocationInit("TR", "Istanbul", "41.0082,28.9784", "10.2.33.12"); // Set user initial location.
+
 
                 /** Optional settings for Countly initialisation */
                 Countly.enableParameterTamperingProtection("salt"); // Set the optional salt to be used for calculating the checksum of requested data which will be sent with each request
                 // Countly.pinnedCertificates("count.ly.cer"); // It will ensure that connection is made with one of the public keys specified
-                // Countly.setHttpPostForced(false); // Set to "true" if you want HTTP POST to be used for all requests
+                Countly.setHttpPostForced(false); // Set to "true" if you want HTTP POST to be used for all requests
+                Countly.enableApm(); // Enable APM features, which includes the recording of app start time.
                 Countly.enableAttribution(); // Enable to measure your marketing campaign performance by attributing installs from specific campaigns.
-
+                Countly.setRemoteConfigAutomaticDownload(function(r){
+                    alert("onSuccess : " + r)
+                }, function(r){
+                    alert("onError : " + r);
+                }); // Set Automatic value download happens when the SDK is initiated or when the device ID is changed.
+                
                 Countly.init("https://try.count.ly", "YOUR_API_KEY").then((result) => {
                     /** 
                      * Push notifications settings 
@@ -316,14 +325,14 @@
     app.setUserData = function() {
         // example for setUserData
         var options = {};
-        options.name = "Trinisoft Technologies";
-        options.username = "trinisofttechnologies";
-        options.email = "trinisofttechnologies@gmail.com";
-        options.organization = "Trinisoft Technologies Pvt. Ltd.";
-        options.phone = "+91 812 840 2946";
-        options.picture = "https://avatars0.githubusercontent.com/u/10754117?s=400&u=fe019f92d573ac76cbfe7969dde5e20d7206975a&v=4";
+        options.name = "Name of User";
+        options.username = "Username";
+        options.email = "User Email";
+        options.org = "User Organization";
+        options.phone = "User Contact number";
+        options.picture = "https://count.ly/images/logos/countly-logo.png";
         options.picturePath = "";
-        options.gender = "M"; // "F"
+        options.gender = "User Gender";
         options.byear = 1989;
         Countly.setUserData(options);
     };
