Cordova example alerts replaced with logs.

--- a/example/cordova/countly-demo-js/www/index.html
+++ b/example/cordova/countly-demo-js/www/index.html
@@ -146,9 +146,9 @@
     </div>
     <script type="text/javascript">
         document.addEventListener("deviceready", function(){
-            console.log("deviceready");
+            console.log("[CountlyCordova] deviceready");
             Countly.onNotification(function(theNotification){
-                alert(JSON.stringify(theNotification));
+                console.log("[CountlyCordova] onNotification : " + JSON.stringify(theNotification));
             });
         });
     app = {};
@@ -179,9 +179,9 @@
                 Countly.enableApm(); // Enable APM features, which includes the recording of app start time.
                 Countly.enableAttribution(); // Enable to measure your marketing campaign performance by attributing installs from specific campaigns.
                 Countly.setRemoteConfigAutomaticDownload(function(r){
-                    alert("onSuccess : " + r)
+                    console.log("[CountlyCordova] onSuccess : " + r)
                 }, function(r){
-                    alert("onError : " + r);
+                    console.log("[CountlyCordova] onError : " + r);
                 }); // Set Automatic value download happens when the SDK is initiated or when the device ID is changed.
                 
                 Countly.init("https://try.count.ly", "YOUR_API_KEY").then((result) => {
@@ -191,7 +191,7 @@
                     */
                     Countly.pushTokenType(Countly.messagingMode.TEST); // Set messaging mode for push notifications
                     Countly.onNotification(function(theNotification){
-                        alert(JSON.stringify(theNotification));
+                        console.log("[CountlyCordova] onNotification : " + JSON.stringify(theNotification));
                     }); // Set callback to receive push notifications
                     Countly.askForNotificationPermission(); // This method will ask for permission, enables push notification and send push token to countly server.
 
@@ -223,7 +223,7 @@
     };
 
     app.setLocation = function() {
-        Countly.setLocation("28.006324","-82.7166183");
+        Countly.setLocation("TR", "Istanbul", "41.0082,28.9784", "10.2.33.12");
     };
 
     app.event = function() {
@@ -404,21 +404,7 @@
         // example for setLoggingEnabled
         Countly.setLoggingEnabled(false);
     }
-    // app.testAndroidPush = function() {
-    //     Countly.sendPushToken({
-    //         "token": "1234567890",
-    //         "messagingMode": Countly.messagingMode.DEVELOPMENT
-    //     });
-    // };
-
-    // app.testiOSPush = function() {
-    //     Countly.sendPushToken({
-    //         "token": "1234567890",
-    //         "messagingMode": Countly.messagingMode.DEVELOPMENT
-    //     });
-    // };
-
-
+    
     app.sendPushToken = function() {
 
         var push = PushNotification.init({
@@ -432,7 +418,7 @@
         });
 
         push.on('registration', function(data) {
-            alert('Token received: '+data.registrationId);
+            console.log("[CountlyCordova] registration : " + 'Token received: '+data.registrationId);
             Countly.sendPushToken({
                 "token": data.registrationId,
                 "messagingMode": Countly.messagingMode.DEVELOPMENT
@@ -440,7 +426,7 @@
         });
 
         push.on('notification', function(data) {
-            alert(JSON.stringify(data));
+            console.log("[CountlyCordova] notification : " + JSON.stringify(data));
         });
 
         push.on('error', function(e) {
@@ -527,7 +513,7 @@
     }
     app.askForStarRating = function(){
         Countly.askForStarRating(function(ratingResult){
-            console.log(ratingResult);
+            console.log("[CountlyCordova] askForStarRating : " + ratingResult);
         });
     }
 
@@ -693,94 +679,94 @@
     // Remote config usage
     app.setRemoteConfigAutomaticDownload = function(){
         Countly.setRemoteConfigAutomaticDownload(function(r){
-            alert(r)
+            console.log("[CountlyCordova] setRemoteConfigAutomaticDownload onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] setRemoteConfigAutomaticDownload onError : " + r);
         });
     }
     app.remoteConfigUpdate = function(){
         Countly.remoteConfigUpdate(function(r){
-            alert(r)
+            console.log("[CountlyCordova] remoteConfigUpdate onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] remoteConfigUpdate onError : " + r);
         });
     }
     app.updateRemoteConfigForKeysOnly = function(){
         Countly.updateRemoteConfigForKeysOnly(["name"], function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForKeysOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForKeysOnly onError : " + r);
         });
     }
     app.updateRemoteConfigExceptKeys = function(){
         Countly.updateRemoteConfigExceptKeys(["url"], function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigExceptKeys onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigExceptKeys onError : " + r);
         });
     }
     app.remoteConfigClearValues = function(){
         Countly.remoteConfigClearValues(function(r){
-            alert(r)
+            console.log("[CountlyCordova] remoteConfigClearValues onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] remoteConfigClearValues onError : " + r);
         });
     }
     app.getRemoteConfigValueForKey = function(){
         Countly.getRemoteConfigValueForKey("name", function(r){
-            alert(r)
+            console.log("[CountlyCordova] getRemoteConfigValueForKey onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] getRemoteConfigValueForKey onError : " + r);
         });
     }
 
     app.updateRemoteConfigForbooleanValueOnly = function(){
         Countly.getRemoteConfigValueForKey("booleanValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForbooleanValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForbooleanValueOnly onError : " + r);
         });
     }
     app.updateRemoteConfigForfloatValueOnly = function(){
         Countly.getRemoteConfigValueForKey("floatValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForfloatValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForfloatValueOnly onError : " + r);
         });
     }
     app.updateRemoteConfigForintegerValueOnly = function(){
         Countly.getRemoteConfigValueForKey("integerValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForintegerValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForintegerValueOnly onError : " + r);
         });
     }
     app.updateRemoteConfigForstringValueOnly = function(){
         Countly.getRemoteConfigValueForKey("stringValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForstringValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForstringValueOnly onError : " + r);
         });
     }
     app.updateRemoteConfigForjsonValueOnly = function(){
         Countly.getRemoteConfigValueForKey("jsonValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForjsonValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForjsonValueOnly onError : " + r);
         });
     }
     app.updateRemoteConfigForjsonStringValueOnly = function(){
         Countly.getRemoteConfigValueForKey("arrayStringValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForjsonStringValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForjsonStringValueOnly onError : " + r);
         });
     }
     app.updateRemoteConfigForjsonNumberValueOnly = function(){
         Countly.getRemoteConfigValueForKey("arrayNumberValue", function(r){
-            alert(r)
+            console.log("[CountlyCordova] updateRemoteConfigForjsonNumberValueOnly onSuccess : " + r)
         }, function(r){
-            alert(r);
+            console.log("[CountlyCordova] updateRemoteConfigForjsonNumberValueOnly onError : " + r);
         });
     }
 
