--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 }); // Set Automatic value download happens when the SDK is initiated or when the device ID is changed.
                 
                 Countly.init("https://try.count.ly", "YOUR_API_KEY").then((result) => {
+                Countly.setStarRatingDialogTexts("Title", "Message", "Dismiss");
                     /** 
                      * Push notifications settings 
                      * Should be call after init
